# Weather_forecast

./: .gitmodules  CMakeLists.txt  README.md  config.txt
lib/: CMakeLists.txt  OMFLparser.cpp  OMFLparser.h  request.cpp  request.h  weather.cpp  weather.h
